--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@rails/actiontext": "^6.0.2-2",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
+    "@rails/webpacker": "^5.0.0",
     "stimulus": "^1.1.1",
     "tributejs": "^5.1.3",
     "trix": "^1.0.0",
